# static-traffic-analyzer

./: .gitignore  prompt.md  pyproject.toml
src/static_traffic_analyzer/: __init__.py  catalog.py  cli.py  evaluator.py  models.py  utils.py
src/static_traffic_analyzer/parsers/: __init__.py  db.py  excel.py  fortigate.py
tests/: conftest.py  test_core.py  test_excel_parser.py
