[build-system]
requires = ["hatchling>=1.24.2"]
build-backend = "hatchling.build"

[project]
name = "static-traffic-analyzer"
version = "0.1.0"
description = "Static traffic analysis CLI for firewall rules."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Static Traffic Analyzer" }
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "openpyxl>=3.1.2",
]

[project.optional-dependencies]
db = [
  "mysql-connector-python>=8.2.0",
]

test = [
  "pytest>=7.4.0",
]

[project.scripts]
static-traffic-analyzer = "static_traffic_analyzer.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/static_traffic_analyzer"]
